--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>nacos-server</module>
         <module>nacos-consumer</module>
+        <module>spring-gateway</module>
     </modules>
 
     <parent>
