--- a/nacos-server/pom.xml
+++ b/nacos-server/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
             <version>2.2.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+        </dependency>
 
     </dependencies>
 
